--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ h2 {
   opacity: .7;
 }
 .logo {
-  margin-top: 2em;
+  margin-top: 1em;
   width: 125px;
 }
 .top-txt {
   font-family: "Story Script", sans-serif;
-  padding: 0 0 3em 0;
+  padding: 2em 0 3em 0;
 }
 .home {
   text-align: center;
