--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
 }
+
 img {
   max-width: 100%;
 }
@@ -56,6 +57,9 @@ body {
 .home {
   text-align: center;
 }
+.about-nav {
+  padding: 4.5em 0 2em;
+}
 .home-img {
   width: 90%;
   border-radius: 10px;
@@ -64,6 +68,12 @@ body {
 ul {
   list-style: none;
   padding: 1.5em 0 0 0;
+}
+ul li {
+  margin-bottom: .4em;
+}
+ul li:last-child {
+  margin-bottom: 0;
 }
 a {
   color: #fff;
@@ -87,6 +97,26 @@ a:hover{
 .img-gallery img:last-child {
   margin-bottom: 3em;
 }
+.about-content {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+}
+.about-title {
+  font-size: 3rem;
+  margin-bottom: .5em;
+}
+.about-text {
+  font-size: 2rem;
+}
+.about-title,
+.about-text {
+ 
+ font-family: 'Oleo Script Swash Caps', cursive;
+}
 .footer {
   background: #ffe1e1;
   text-align: center;
@@ -101,26 +131,4 @@ a:hover{
   width: 100%;
   margin-top: 2em;
   padding: .1em;
-}
-.accent {
-  position: absolute;
-  background: #f3a6b3;
-  text-align: center;
-  width: 160px;
-  height: 60px;
-  margin: 0 0 -40px -10px;
-  top: 200px;
-  border-radius: 10px;
-  opacity: .8;
-}
-.color-accent {
-  position: absolute;
-  background: #f3a6b3;
-  text-align: center;
-  width: 250px;
-  height: 60px;
-  margin: 0 0 0 -22px;
-  top: 2810px;
-  border-radius: 10px;
-  opacity: .8;
 }
