--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ body {
   color: #fff;
 }
 .title {
-  padding: .5em 0 0;
-  z-index: 1;
+  padding: .5em 1em 0;
 }
 .shiny-text {
   text-align: center;
@@ -54,11 +53,20 @@ body {
 .navbar {
   padding: 0 0 1em;
 }
+.gallery-hdr {
+  font-family: "Italiana", sans-serif;
+  font-size: 5rem;
+  opacity: .8;
+  padding: 1em 0 0;
+}
 .home {
   text-align: center;
 }
 .about-nav {
   padding: 4.5em 0 2em;
+}
+.contact-nav {
+  padding: 1.5em 0;
 }
 .home-img {
   width: 100%;
@@ -101,7 +109,6 @@ a:hover{
   margin-bottom: 3em;
 }
 .about-content {
-  
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -118,6 +125,52 @@ a:hover{
 .about-title,
 .about-text {
  font-family: 'Oleo Script Swash Caps', cursive;
+}
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 60%;
+  margin: 0 auto;
+}
+.contact-title {
+  padding: 5rem 0 0 0;
+  font-size: 3rem;
+}
+.label-txt {
+  font-family: "Story Script", sans-serif;
+  padding: 8px 0;
+  margin: 0;
+}
+input {
+  background: linear-gradient(120deg,
+        #eee 10%,
+        /* light */
+        #ccc 30%,
+        /* mid-tone */
+        #fff 45%,
+        /* highlight */
+        #aaa 55%,
+        /* mid-tone */
+        #fff 70%,
+        /* strong highlight */
+        #888 85%
+        /* dark */
+  );
+  color: #333;
+  font-size: 1.1rem;
+  height: 2rem;
+  border: 0;
+}
+button {
+  font-size: 1.2em;
+  margin-top: 1em;
+  padding: .5em 0;
+  color: #ccc;
+  border: 0;
+  border-radius: 12px;
+  background: linear-gradient(45deg, #333, #666);
+  box-shadow: 4px 2px 2px rgba(116, 116, 116, 0.9);
 }
 .footer {
   background: #ffe1e1;
