--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background: #eee;
   margin: 0;
   font-family: "Merriweather Sans", sans-serif, Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 800;
+  font-weight: 100;
   font-size: 24px;
   color: #fff;
 }
@@ -43,6 +43,7 @@ body {
 }
 .blue-text {
   background: linear-gradient(90deg, #415b8c, #8aa6d5);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -65,19 +66,11 @@ body {
   padding: 2em 0;
   opacity: .7;
 }
-
-.gallery-hdr {
-  font-family: "Italiana", sans-serif;
-  font-size: 4.5rem;
-  opacity: .8;
-  padding: 1em 0 0;
-}
 .title {
   font-family: "Story Script", sans-serif;
   font-size: 3rem;
   padding: .5em 0;
   margin: 0;
-
 }
 .home {
   background-image:
@@ -114,31 +107,41 @@ ul li {
 ul li:last-child {
   margin-bottom: 0;
 }
+.navbar {
+  background: #111;
+}
 .navbar a {
+  font-style: italic;
   color: #fff;
   text-decoration: none;
-  border-bottom: 3px solid #fff;
+ 
 }
 a:hover{
   color: #8f3838;
   cursor: pointer;
 }
-.img-gallery {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2.5em;
+.gallery-hdr {
+  font-family: "Italiana", sans-serif;
+  font-size: 4.5rem;
+  opacity: .8;
+  padding: 1em 0;
+  text-align: center;
 }
-.img-gallery img {
+.gallery {
   width: 90%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2em;
+  padding: 2rem;
+}
+
+.gallery img {
+  width: 100%;
   height: auto;
-}
-.img-gallery img:last-child {
-  margin-bottom: 2.5em;
-}
-img.gallery-accents {
-  display: inline-block;
- margin: 0;
+  aspect-ratio: 2/3;
+  border-radius: 8px;
+  object-fit: cover;
 }
 .about-content {
   background: #eee;
@@ -226,6 +229,8 @@ button {
 }
 .footer {
   background: #111;
+  border-top: 5px solid #ddd;
+  color: #eee
 }
 .footer p,
 .footer a,
@@ -241,6 +246,10 @@ button {
   text-decoration: none;
 }
 @media (min-width: 768px) {
+  .navbar {
+    padding: 1.5em 0;
+    border-bottom: 5px solid #ddd;
+  }
   .navbar ul{
     display: flex;
     justify-content: center;
@@ -248,7 +257,7 @@ button {
   }
   .navbar li {
     font-size: 2rem;
-    padding: 2em 0 0;
+    padding: .8em 0 1.8;
     margin: 0 1em;
   }
   .grid-wrapper {
