--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ ul li:last-child {
   background: #111;
   text-align: center;
   padding: 1em 0;
+  border-bottom: 5px solid #ddd;
 }
 .navbar a {
   font-style: italic;
@@ -126,8 +127,16 @@ a:hover{
   font-family: "Italiana", sans-serif;
   font-size: 4.5rem;
   opacity: .8;
-  padding: 1em 0;
+  padding: 1em 0 .5em;
   text-align: center;
+}
+
+.scissors {
+ width: 2.5em;
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ padding: .5em 0 1em 0;
 }
 .gallery {
   width: 90%;
@@ -137,7 +146,6 @@ a:hover{
   gap: 2em;
   padding: 2rem;
 }
-
 .gallery img {
   width: 100%;
   height: auto;
@@ -238,7 +246,8 @@ button {
 .footer {
   background: #111;
   border-top: 5px solid #ddd;
-  color: #eee
+  color: #eee;
+  padding: 1em;
 }
 .footer p,
 .footer a,
