--- a/style.css
+++ b/style.css
@@ -205,15 +205,21 @@ a:hover{
 .contact-form input,
 .contact-form button {
   width: 100%;
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-bottom: 15px;
   padding: 12px;
+}
+.contact-form button {
+  font-size: 2rem;
 }
 .contact-title {
   padding: 2rem 0 1rem 0;
   font-size: 3rem;
 }
-.contact-text {
+.contact-phone {
+  font-size: 1.5rem;
+}
+.contact-email {
   font-size: 1.5rem;
   padding-bottom: 4em;
 }
